Traherne-2.0.3 MacOS installer (dmg) done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ if(APPLE)
   set(CMAKE_SKIP_BUILD_RPATH FALSE)
   set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
   set(CMAKE_MACOSX_RPATH TRUE)
-  set(CMAKE_INSTALL_RPATH "@executable_path/lib/")
+  set(CMAKE_INSTALL_RPATH "@executable_path/../Resources/lib/")
   #set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
   SET (VLFEAT_LIB "/Users/tlm/deps/clang/imcomp/tmp_libsrc/vlfeat-0.9.21/bin/maci64/libvl.dylib")
@@ -219,10 +219,12 @@ if(APPLE)
   SET(CPACK_PACKAGE_VENDOR "Visual Geometry Group")
   SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${RELEASE_PACKAGE_DESCRIPTION}")
   SET(CPACK_PACKAGE_VERSION "${IMCOMP_SERVER_VERSION_MAJOR}.${IMCOMP_SERVER_VERSION_MINOR}.${IMCOMP_SERVER_VERSION_PATCH}")
+  SET(CPACK_PACKAGE_FILE_NAME "${RELEASE_PACKAGE_NAME}-${IMCOMP_SERVER_VERSION_MAJOR}.${IMCOMP_SERVER_VERSION_MINOR}.${IMCOMP_SERVER_VERSION_PATCH}-MacOS")
   SET(CPACK_PACKAGE_VERSION_MAJOR ${IMCOMP_SERVER_VERSION_MAJOR})
   SET(CPACK_PACKAGE_VERSION_MINOR ${IMCOMP_SERVER_VERSION_MINOR})
   SET(CPACK_PACKAGE_VERSION_PATCH ${IMCOMP_SERVER_VERSION_PATCH})
   SET(CPACK_PACKAGE_INSTALL_DIRECTORY "${RELEASE_PACKAGE_DESCRIPTION}")
+
 
   SET(CPACK_PACKAGE_ICON "${CMAKE_CURRENT_SOURCE_DIR}/resources/mac/traherne_icon.icns")
   SET(CPACK_BUNDLE_NAME "${RELEASE_PACKAGE_NAME}")
@@ -231,13 +233,14 @@ if(APPLE)
   SET(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
 
   SET(CPACK_BUNDLE_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/resources/mac/resources.plist")
+  #SET(CPACK_BUNDLE_STARTUP_COMMAND "${CMAKE_CURRENT_SOURCE_DIR}/scripts/dist/mac_start_traherne.sh")
   SET(CPACK_BUNDLE_STARTUP_COMMAND "${CMAKE_CURRENT_SOURCE_DIR}/scripts/dist/mac_start_traherne.sh")
 
   # icon
-  SET(MACOSX_BUNDLE_ICON_FILE "traherne_icon.icns")
-  #SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_SOURCE_DIR}/resources/mac/traherne_icon.icns PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
+  SET(MACOSX_BUNDLE_ICON_FILE "Traherne.icns")
 
-  #SET(CPACK_BINARY_DRAGNDROP ON)  
+  # dmg signing
+  #SET(CPACK_BUNDLE_APPLE_CERT_APP "3rd Party Mac Developer Application: Abhishek Dutta <adutta@robots.ox.ac.uk>")
 
   # @todo avoid hard coded paths
   INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/asset" DESTINATION ".")
