--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,11 @@ add_subdirectory( imcomp )
 add_subdirectory( util )
 add_subdirectory( imreg_sift )
 
+if(UNIX)
+  add_executable( imcomp_server imcomp_server.cc )
+  target_link_libraries( imcomp_server http_server imcomp_request_handler ${ImageMagick_LIBRARIES} ${Boost_LIBRARIES} -lpthread)
+endif()
+
 if(APPLE)
   if(RELEASE_PACKAGE_NAME MATCHES "Traherne")
     add_executable( Traherne imcomp_server.cc )
