--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,12 +22,13 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set (IMCOMP_SERVER_NAME "imcomp_server")
 set (IMCOMP_SERVER_VERSION_MAJOR "2")
 set (IMCOMP_SERVER_VERSION_MINOR "0")
+# set during the build process (see build_win_release.cmd)
 #set (IMCOMP_SERVER_VERSION_PATCH "x") # traherne or imcomp user interface version to be set by user
 set (IMCOMP_SERVER_URL "http://www.robots.ox.ac.uk/~vgg/software/imcomp/")
 set (IMCOMP_SERVER_AUTHOR_NAME "Abhishek Dutta")
 set (IMCOMP_SERVER_AUTHOR_EMAIL "adutta@robots.ox.ac.uk")
 set (IMCOMP_SERVER_FIRST_RELEASE_DATE "Nov. 2017")
-set (IMCOMP_SERVER_CURRENT_RELEASE_DATE "06 Jan. 2019")
+set (IMCOMP_SERVER_CURRENT_RELEASE_DATE "19 Feb. 2019")
 configure_file (
   "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_SOURCE_DIR}/imcomp_server_config.h.in" 
   "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_INCLUDE_DIR}/imcomp_server_config.h"
