initial commit for pre-computing and caching features

--- a/src/imcomp/CMakeLists.txt
+++ b/src/imcomp/CMakeLists.txt
@@ -1,2 +1,4 @@
 add_library( imcomp_request_handler imcomp_request_handler.cc)
+add_library( imcomp_cache imcomp_cache.cc)
+
 target_link_libraries( imcomp_request_handler http_request http_response util imreg_sift ${ImageMagick_LIBRARIES} ${Boost_LIBRARIES} )
